--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,2 +1,9 @@
-Django==3.2.12
-python-apt==2.4.0+ubuntu2
+asgiref
+Django
+django-crispy-forms
+django-widget-tweaks
+sqlparse
+typing_extensions
+
+python-dotenv==0.21.0
+requests==2.28.1
